fix style.css for a abnormal "text-align:center"

--- a/style.css
+++ b/style.css
@@ -42,10 +42,11 @@ body {
 }
 
 h1 {
-	text-align: center;
+	/*text-align: center;*/
 	color: #101010;
 	font-size: 1.625rem;
-	margin-bottom: .5rem;
+	margin-bottom: 8px;
+	margin-top: 8px;
 	font-weight: 700;
 	}
 h2 {
